--- a/src/language-site/package.json
+++ b/src/language-site/package.json
@@ -24,6 +24,7 @@
     "angular-countries": "^1.1.5",
     "angular-ng-autocomplete": "^2.0.1",
     "bootstrap": "^4.5.3",
+    "countries-list": "^2.5.6",
     "ngx-toastr": "^13.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
